--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "omegachat-frontend-vue",
+  "name": "giga-chat-frontend",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -9,7 +9,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "pinia": "^2.0.11",
+    "socket.io-client": "^4.4.1",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12"
   },
